--- a/PPMToolFullStack_React_Java/PPMToolFullStack/PPMToolFullStack/pom.xml
+++ b/PPMToolFullStack_React_Java/PPMToolFullStack/PPMToolFullStack/pom.xml
@@ -53,6 +53,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
