--- a/PPMToolFullStack_React_Java/PPMToolFullStack/PPMToolFullStack/src/main/resources/application.properties
+++ b/PPMToolFullStack_React_Java/PPMToolFullStack/PPMToolFullStack/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:D:\\Documents\\h2_testdb
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.data.jpa.repositories.bootstrap-mode=default
